Feat: Implemented fuzzy search engine and title-bias ranking logic

--- a/content/tsconfig.json
+++ b/content/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "..",
     "rootDir": "..",
     "tsBuildInfoFile": "../scripts/.ts.content.build",
+    "ignoreDeprecations": "6.0"
   },
   "include": [ "*.ts", "../lib/*.ts" ],
   "exclude": [ "../lib/injector.ts", "../lib/simple_eval.ts" ],
